--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.parqueaderocolombia">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:name="com.orm.SugarApp"
         android:allowBackup="true"
